@@ -16,11 +16,11 @@ User::getgrouplist - Interface to glibc "getgrouplist" function
 
 =head1 VERSION
 
-Version 1.1.0
+Version 1.1.1
 
 =cut
 
-our $VERSION = '1.1.0';
+our $VERSION = '1.1.1';
 
 =head1 SYNOPSIS
 
